Correcion de errores de accesibilidad de clases y paquetes a las pruebas